--- a/result/2022-07-04.md
+++ b/result/2022-07-04.md
@@ -44,7 +44,8 @@
 44. [4AM好可惜](https://s.weibo.com//weibo?q=4AM%E5%A5%BD%E5%8F%AF%E6%83%9C&Refer=top) 90759
 45. [中国球迷现场为女排加油](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%90%83%E8%BF%B7%E7%8E%B0%E5%9C%BA%E4%B8%BA%E5%A5%B3%E6%8E%92%E5%8A%A0%E6%B2%B9%23&Refer=top) 81544
 46. [刘畊宏直播](https://s.weibo.com//weibo?q=%E5%88%98%E7%95%8A%E5%AE%8F%E7%9B%B4%E6%92%AD&Refer=top) 38148
-47. [F1 吓人](https://s.weibo.com//weibo?q=F1%20%E5%90%93%E4%BA%BA&Refer=top) 34450
-48. [周慧敏曾谈和倪匡的相处](https://s.weibo.com//weibo?q=%23%E5%91%A8%E6%85%A7%E6%95%8F%E6%9B%BE%E8%B0%88%E5%92%8C%E5%80%AA%E5%8C%A1%E7%9A%84%E7%9B%B8%E5%A4%84%23&Refer=top) 30398
-49. [女孩为报恩66万买房车带养父旅游](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E4%B8%BA%E6%8A%A5%E6%81%A966%E4%B8%87%E4%B9%B0%E6%88%BF%E8%BD%A6%E5%B8%A6%E5%85%BB%E7%88%B6%E6%97%85%E6%B8%B8%23&Refer=top) 19795
-50. [边防官兵在恶劣天气中收国旗](https://s.weibo.com//weibo?q=%23%E8%BE%B9%E9%98%B2%E5%AE%98%E5%85%B5%E5%9C%A8%E6%81%B6%E5%8A%A3%E5%A4%A9%E6%B0%94%E4%B8%AD%E6%94%B6%E5%9B%BD%E6%97%97%23&Refer=top) 8513
+47. [女孩为报恩66万买房车带养父旅游](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E4%B8%BA%E6%8A%A5%E6%81%A966%E4%B8%87%E4%B9%B0%E6%88%BF%E8%BD%A6%E5%B8%A6%E5%85%BB%E7%88%B6%E6%97%85%E6%B8%B8%23&Refer=top) 36139
+48. [F1 吓人](https://s.weibo.com//weibo?q=F1%20%E5%90%93%E4%BA%BA&Refer=top) 34450
+49. [周慧敏曾谈和倪匡的相处](https://s.weibo.com//weibo?q=%23%E5%91%A8%E6%85%A7%E6%95%8F%E6%9B%BE%E8%B0%88%E5%92%8C%E5%80%AA%E5%8C%A1%E7%9A%84%E7%9B%B8%E5%A4%84%23&Refer=top) 30398
+50. [00后女枪王暑假在家当起军训教官](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E5%A5%B3%E6%9E%AA%E7%8E%8B%E6%9A%91%E5%81%87%E5%9C%A8%E5%AE%B6%E5%BD%93%E8%B5%B7%E5%86%9B%E8%AE%AD%E6%95%99%E5%AE%98%23&Refer=top) 9694
+51. [边防官兵在恶劣天气中收国旗](https://s.weibo.com//weibo?q=%23%E8%BE%B9%E9%98%B2%E5%AE%98%E5%85%B5%E5%9C%A8%E6%81%B6%E5%8A%A3%E5%A4%A9%E6%B0%94%E4%B8%AD%E6%94%B6%E5%9B%BD%E6%97%97%23&Refer=top) 8513
