--- a/result/2022-07-04.md
+++ b/result/2022-07-04.md
@@ -47,6 +47,7 @@
 47. [刘畊宏直播](https://s.weibo.com//weibo?q=%E5%88%98%E7%95%8A%E5%AE%8F%E7%9B%B4%E6%92%AD&Refer=top) 38148
 48. [F1 吓人](https://s.weibo.com//weibo?q=F1%20%E5%90%93%E4%BA%BA&Refer=top) 34450
 49. [周慧敏曾谈和倪匡的相处](https://s.weibo.com//weibo?q=%23%E5%91%A8%E6%85%A7%E6%95%8F%E6%9B%BE%E8%B0%88%E5%92%8C%E5%80%AA%E5%8C%A1%E7%9A%84%E7%9B%B8%E5%A4%84%23&Refer=top) 30398
-50. [泗县疫情还会扩大吗](https://s.weibo.com//weibo?q=%23%E6%B3%97%E5%8E%BF%E7%96%AB%E6%83%85%E8%BF%98%E4%BC%9A%E6%89%A9%E5%A4%A7%E5%90%97%23&Refer=top) 23965
-51. [00后女枪王暑假在家当起军训教官](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E5%A5%B3%E6%9E%AA%E7%8E%8B%E6%9A%91%E5%81%87%E5%9C%A8%E5%AE%B6%E5%BD%93%E8%B5%B7%E5%86%9B%E8%AE%AD%E6%95%99%E5%AE%98%23&Refer=top) 9694
-52. [边防官兵在恶劣天气中收国旗](https://s.weibo.com//weibo?q=%23%E8%BE%B9%E9%98%B2%E5%AE%98%E5%85%B5%E5%9C%A8%E6%81%B6%E5%8A%A3%E5%A4%A9%E6%B0%94%E4%B8%AD%E6%94%B6%E5%9B%BD%E6%97%97%23&Refer=top) 8513
+50. [泗县疫情还会扩大吗](https://s.weibo.com//weibo?q=%23%E6%B3%97%E5%8E%BF%E7%96%AB%E6%83%85%E8%BF%98%E4%BC%9A%E6%89%A9%E5%A4%A7%E5%90%97%23&Refer=top) 26300
+51. [河北无疫情地区原则上不开展每周全员核酸](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8C%97%E6%97%A0%E7%96%AB%E6%83%85%E5%9C%B0%E5%8C%BA%E5%8E%9F%E5%88%99%E4%B8%8A%E4%B8%8D%E5%BC%80%E5%B1%95%E6%AF%8F%E5%91%A8%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%23&Refer=top) 13019
+52. [00后女枪王暑假在家当起军训教官](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E5%A5%B3%E6%9E%AA%E7%8E%8B%E6%9A%91%E5%81%87%E5%9C%A8%E5%AE%B6%E5%BD%93%E8%B5%B7%E5%86%9B%E8%AE%AD%E6%95%99%E5%AE%98%23&Refer=top) 9694
+53. [边防官兵在恶劣天气中收国旗](https://s.weibo.com//weibo?q=%23%E8%BE%B9%E9%98%B2%E5%AE%98%E5%85%B5%E5%9C%A8%E6%81%B6%E5%8A%A3%E5%A4%A9%E6%B0%94%E4%B8%AD%E6%94%B6%E5%9B%BD%E6%97%97%23&Refer=top) 8513
